--- a/service.html
+++ b/service.html
@@ -26,7 +26,9 @@
       <div class="header-bgr">
         <div class="header">
           <div class="image-container">
-            <a href="./index.html"><img src="./assets/logo.png" alt="logo" /></a>
+            <a href="./index.html"
+              ><img src="./assets/logo.png" alt="logo"
+            /></a>
             <button class="hamburger" aria-label="Menu">&#9776;</button>
           </div>
 
